Example now includes deletion of template files after run

--- a/example/TACO_workflow.ipynb
+++ b/example/TACO_workflow.ipynb
@@ -873,6 +873,23 @@
     ")\n",
     "cp_graph"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we do some clean-up for the next run. Do not execute this cell if you want to have a look at the template files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for f in pathlib.Path('templates').glob('*_template.xlsx'):\n",
+    "    f.unlink()"
+   ]
   }
  ],
  "metadata": {
@@ -891,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
