Example notebook re-run

--- a/example/TACO_workflow.ipynb
+++ b/example/TACO_workflow.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -253,74 +253,74 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>234</th>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p225_236</td>\n",
+       "      <th>97</th>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p225_231</td>\n",
        "      <td>pEC-Tmob18_Lrp_eYFP</td>\n",
        "      <td>225</td>\n",
-       "      <td>236</td>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p225_236_4</td>\n",
-       "      <td>9.0</td>\n",
+       "      <td>231</td>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p225_231_1</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>7.0</td>\n",
+       "      <td>success</td>\n",
+       "      <td>success</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>B7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p226_236</td>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP</td>\n",
+       "      <td>226</td>\n",
+       "      <td>236</td>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p226_236_1</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>success</td>\n",
        "      <td>None</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>E5</td>\n",
+       "      <td>F5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p225_230</td>\n",
+       "      <th>186</th>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p221_235</td>\n",
        "      <td>pEC-Tmob18_Lrp_eYFP</td>\n",
-       "      <td>225</td>\n",
-       "      <td>230</td>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p225_230_4</td>\n",
+       "      <td>221</td>\n",
+       "      <td>235</td>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p221_235_1</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>success</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>B2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p221_231</td>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP</td>\n",
+       "      <td>221</td>\n",
+       "      <td>231</td>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p221_231_2</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>success</td>\n",
+       "      <td>success</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>B6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p220_231</td>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP</td>\n",
+       "      <td>220</td>\n",
+       "      <td>231</td>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p220_231_4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>success</td>\n",
        "      <td>None</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>A5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>212</th>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p221_236</td>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP</td>\n",
-       "      <td>221</td>\n",
-       "      <td>236</td>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p221_236_2</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>success</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>C4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>296</th>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p221_239</td>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP</td>\n",
-       "      <td>221</td>\n",
-       "      <td>239</td>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p221_239_3</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>success</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>A10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>214</th>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p221_236</td>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP</td>\n",
-       "      <td>221</td>\n",
-       "      <td>236</td>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p221_236_4</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>success</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>E4</td>\n",
+       "      <td>H5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -328,28 +328,28 @@
       ],
       "text/plain": [
        "                        construct             backbone  primerA  primerB  \\\n",
-       "234  pEC-Tmob18_Lrp_eYFP_p225_236  pEC-Tmob18_Lrp_eYFP      225      236   \n",
-       "60   pEC-Tmob18_Lrp_eYFP_p225_230  pEC-Tmob18_Lrp_eYFP      225      230   \n",
-       "212  pEC-Tmob18_Lrp_eYFP_p221_236  pEC-Tmob18_Lrp_eYFP      221      236   \n",
-       "296  pEC-Tmob18_Lrp_eYFP_p221_239  pEC-Tmob18_Lrp_eYFP      221      239   \n",
-       "214  pEC-Tmob18_Lrp_eYFP_p221_236  pEC-Tmob18_Lrp_eYFP      221      236   \n",
+       "97   pEC-Tmob18_Lrp_eYFP_p225_231  pEC-Tmob18_Lrp_eYFP      225      231   \n",
+       "239  pEC-Tmob18_Lrp_eYFP_p226_236  pEC-Tmob18_Lrp_eYFP      226      236   \n",
+       "186  pEC-Tmob18_Lrp_eYFP_p221_235  pEC-Tmob18_Lrp_eYFP      221      235   \n",
+       "78   pEC-Tmob18_Lrp_eYFP_p221_231  pEC-Tmob18_Lrp_eYFP      221      231   \n",
+       "76   pEC-Tmob18_Lrp_eYFP_p220_231  pEC-Tmob18_Lrp_eYFP      220      231   \n",
        "\n",
        "                              clone  agar_plate_number  agar_plate_position  \\\n",
-       "234  pEC-Tmob18_Lrp_eYFP_p225_236_4                9.0                  7.0   \n",
-       "60   pEC-Tmob18_Lrp_eYFP_p225_230_4                3.0                  7.0   \n",
-       "212  pEC-Tmob18_Lrp_eYFP_p221_236_2                9.0                  3.0   \n",
-       "296  pEC-Tmob18_Lrp_eYFP_p221_239_3               12.0                  3.0   \n",
-       "214  pEC-Tmob18_Lrp_eYFP_p221_236_4                9.0                  3.0   \n",
+       "97   pEC-Tmob18_Lrp_eYFP_p225_231_1                4.0                  7.0   \n",
+       "239  pEC-Tmob18_Lrp_eYFP_p226_236_1                9.0                  8.0   \n",
+       "186  pEC-Tmob18_Lrp_eYFP_p221_235_1                8.0                  3.0   \n",
+       "78   pEC-Tmob18_Lrp_eYFP_p221_231_2                4.0                  3.0   \n",
+       "76   pEC-Tmob18_Lrp_eYFP_p220_231_4                4.0                  2.0   \n",
        "\n",
        "    pcr_result seq_result  storage_plate_number storage_plate_position  \n",
-       "234    success       None                   2.0                     E5  \n",
-       "60     success       None                   1.0                     A5  \n",
-       "212    success       None                   2.0                     C4  \n",
-       "296    success       None                   2.0                    A10  \n",
-       "214    success       None                   2.0                     E4  "
+       "97     success    success                   1.0                     B7  \n",
+       "239    success       None                   2.0                     F5  \n",
+       "186    success       None                   2.0                     B2  \n",
+       "78     success    success                   1.0                     B6  \n",
+       "76     success       None                   1.0                     H5  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -474,6 +474,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>260</th>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p225_235</td>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p225_235_Conj_1</td>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p225_235_1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>B9</td>\n",
+       "      <td>success</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>H5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>289</th>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p222_236</td>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p222_236_Conj_2</td>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p222_236_1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A10</td>\n",
+       "      <td>success</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>E6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p220_231</td>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p220_231_Conj_3</td>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p220_231_1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>D3</td>\n",
+       "      <td>success</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>C2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>240</th>\n",
        "      <td>pEC-Tmob18_Lrp_eYFP_p221_235</td>\n",
        "      <td>pEC-Tmob18_Lrp_eYFP_p221_235_Conj_1</td>\n",
@@ -485,48 +518,15 @@
        "      <td>D5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>262</th>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p225_235</td>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p225_235_Conj_3</td>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p225_235_1</td>\n",
+       "      <th>213</th>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p224_234</td>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p224_234_Conj_2</td>\n",
+       "      <td>pEC-Tmob18_Lrp_eYFP_p224_234_1</td>\n",
        "      <td>1</td>\n",
-       "      <td>B9</td>\n",
+       "      <td>F7</td>\n",
        "      <td>success</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>A6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>372</th>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p220_239</td>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p220_239_Conj_1</td>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p220_239_1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>F12</td>\n",
-       "      <td>success</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>H7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106</th>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p225_231</td>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p225_231_Conj_3</td>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p225_231_1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>C4</td>\n",
-       "      <td>success</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>G2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p225_229</td>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p225_229_Conj_2</td>\n",
-       "      <td>pEC-Tmob18_Lrp_eYFP_p225_229_1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>G1</td>\n",
-       "      <td>success</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>B1</td>\n",
+       "      <td>G4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -534,35 +534,35 @@
       ],
       "text/plain": [
        "                        construct                                clone  \\\n",
+       "260  pEC-Tmob18_Lrp_eYFP_p225_235  pEC-Tmob18_Lrp_eYFP_p225_235_Conj_1   \n",
+       "289  pEC-Tmob18_Lrp_eYFP_p222_236  pEC-Tmob18_Lrp_eYFP_p222_236_Conj_2   \n",
+       "78   pEC-Tmob18_Lrp_eYFP_p220_231  pEC-Tmob18_Lrp_eYFP_p220_231_Conj_3   \n",
        "240  pEC-Tmob18_Lrp_eYFP_p221_235  pEC-Tmob18_Lrp_eYFP_p221_235_Conj_1   \n",
-       "262  pEC-Tmob18_Lrp_eYFP_p225_235  pEC-Tmob18_Lrp_eYFP_p225_235_Conj_3   \n",
-       "372  pEC-Tmob18_Lrp_eYFP_p220_239  pEC-Tmob18_Lrp_eYFP_p220_239_Conj_1   \n",
-       "106  pEC-Tmob18_Lrp_eYFP_p225_231  pEC-Tmob18_Lrp_eYFP_p225_231_Conj_3   \n",
-       "25   pEC-Tmob18_Lrp_eYFP_p225_229  pEC-Tmob18_Lrp_eYFP_p225_229_Conj_2   \n",
+       "213  pEC-Tmob18_Lrp_eYFP_p224_234  pEC-Tmob18_Lrp_eYFP_p224_234_Conj_2   \n",
        "\n",
        "                             origin  conjugation_plate_number  \\\n",
+       "260  pEC-Tmob18_Lrp_eYFP_p225_235_1                         1   \n",
+       "289  pEC-Tmob18_Lrp_eYFP_p222_236_1                         1   \n",
+       "78   pEC-Tmob18_Lrp_eYFP_p220_231_1                         1   \n",
        "240  pEC-Tmob18_Lrp_eYFP_p221_235_1                         1   \n",
-       "262  pEC-Tmob18_Lrp_eYFP_p225_235_1                         1   \n",
-       "372  pEC-Tmob18_Lrp_eYFP_p220_239_1                         1   \n",
-       "106  pEC-Tmob18_Lrp_eYFP_p225_231_1                         1   \n",
-       "25   pEC-Tmob18_Lrp_eYFP_p225_229_1                         1   \n",
+       "213  pEC-Tmob18_Lrp_eYFP_p224_234_1                         1   \n",
        "\n",
        "    conjugation_position growth_result  storage_plate_number  \\\n",
+       "260                   B9       success                   1.0   \n",
+       "289                  A10       success                   1.0   \n",
+       "78                    D3       success                   1.0   \n",
        "240                   E8       success                   1.0   \n",
-       "262                   B9       success                   1.0   \n",
-       "372                  F12       success                   1.0   \n",
-       "106                   C4       success                   1.0   \n",
-       "25                    G1       success                   1.0   \n",
+       "213                   F7       success                   1.0   \n",
        "\n",
        "    storage_plate_position  \n",
+       "260                     H5  \n",
+       "289                     E6  \n",
+       "78                      C2  \n",
        "240                     D5  \n",
-       "262                     A6  \n",
-       "372                     H7  \n",
-       "106                     G2  \n",
-       "25                      B1  "
+       "213                     G4  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -712,10 +712,10 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x2083aa4bcd0>"
+       "<graphviz.dot.Digraph at 0x18bcb1bcfd0>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -858,10 +858,10 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x2083aa353d0>"
+       "<graphviz.dot.Digraph at 0x18bcb5e0610>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
